--- a/.github/workflows/test-cache.yml
+++ b/.github/workflows/test-cache.yml
@@ -6,13 +6,18 @@ name: Test cache
 
 on:
   pull_request:
+    # branches:
+    #   - disabled
 
 jobs:
   test-cache:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os:
+          - macos-latest
+          - ubuntu-latest
+          - windows-latest
         config:
           - version: '2.0.1'
             branch:  ''
