Fix missing path in cache (#69)
* Fix missing path in cache

* Minimal cache experiment

--- a/.github/workflows/test-cache.yml
+++ b/.github/workflows/test-cache.yml
@@ -6,13 +6,18 @@ name: Test cache
 
 on:
   pull_request:
+    # branches:
+    #   - disabled
 
 jobs:
-  sanity-check:
+  test-cache:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os:
+          - macos-latest
+          - ubuntu-latest
+          - windows-latest
         config:
           - version: '2.0.1'
             branch:  ''
@@ -35,7 +40,7 @@ jobs:
 
       # This might hit cache
 
-      - name: Check action itself
+      - name: Check action itself (attempt 1)
         id: attempt_1
         uses: alire-project/setup-alire@v3-next
         with:
@@ -44,7 +49,7 @@ jobs:
 
       # Next attemp should hit cache given the previous run
 
-      - name: Check action itself
+      - name: Check action itself (attempt 2)
         if: steps.attempt_1.outputs.cache_hit != 'true'
         id: attempt_2
         uses: alire-project/setup-alire@v3-next
@@ -72,7 +77,6 @@ jobs:
           alr exec -- gprbuild --version
 
       # Verify proper builds
-
       - run: alr -n version | grep "os:" | grep LINUX
         if: matrix.os == 'ubuntu-latest'
         shell: bash
