--- a/.github/workflows/selftest.yml
+++ b/.github/workflows/selftest.yml
@@ -20,15 +20,12 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - name: Check on proper branch
-        if: github.head_ref != 'v3-next'
-        uses: actions/github-script@v3
-        with:
-          script: |
-            core.setFailed(`PRs for latest-stable must come from v2-next, but branch is ${{ github.head_ref }}`)
+
+      - name: Checkout
+        uses: actions/checkout@v2
 
       - name: Setup stable
-        uses: alire-project/setup-alire@v3-next
+        uses: ./ # This uses the action code in the current PR
         if: matrix.target == 'stable'
         with:
           cache: false
@@ -36,14 +33,14 @@ jobs:
           # This way we make sure the cache isn't hiding any issue.
 
       - name: Setup nightly
-        uses: alire-project/setup-alire@v3-next
+        uses: ./
         if: matrix.target == 'nightly'
         with:
           version: nightly
           cache: false
 
       - name: Setup from source (master)
-        uses: alire-project/setup-alire@v3-next
+        uses: ./
         if: matrix.target == 'source'
         with:
           branch: master
