--- a/.github/workflows/selftest.yml
+++ b/.github/workflows/selftest.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-12, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-14, macos-14-arm64, windows-latest]
         target: [stable, nightly, source]
 
     runs-on: ${{ matrix.os }}
