--- a/action.yml
+++ b/action.yml
@@ -107,27 +107,18 @@ runs:
       shell: bash
       run: echo "need=true" >> $GITHUB_OUTPUT
 
-    - name: Install GNAT (I) Linux
-      if: steps.need-GNAT.outputs.need == 'true' && runner.os == 'Linux'
-      uses: engineerd/configurator@v0.0.10
-      with:
-        name: alr
-        url: https://github.com/alire-project/alire/releases/download/v2.0.0/alr-2.0.0-bin-x86_64-linux.zip
-        pathInArchive: bin/alr
-    - name: Install GNAT (I) macOS
-      if: steps.need-GNAT.outputs.need == 'true' && runner.os == 'macOS'
-      uses: engineerd/configurator@v0.0.10
-      with:
-        name: alr
-        url: https://github.com/alire-project/alire/releases/download/v2.0.0/alr-2.0.0-bin-x86_64-macos.zip
-        pathInArchive: bin/alr
-    - name: Install GNAT (I) Windows
-      if: steps.need-GNAT.outputs.need == 'true' && runner.os == 'Windows'
-      uses: engineerd/configurator@v0.0.10
-      with:
-        name: alr.exe
-        url: https://github.com/alire-project/alire/releases/download/v2.0.0/alr-2.0.0-bin-x86_64-windows.zip
-        pathInArchive: bin/alr.exe
+    # Replace previous three alternatives with a manual download and path
+    # addition
+    - name: Install GNAT (I)
+      if: steps.need-GNAT.outputs.need == 'true'
+      shell: bash
+      run: |
+        os_lower=$(echo "${{ runner.os }}" | tr '[:upper:]' '[:lower:]')
+        alr_version=2.0.1
+        curl -L -O https://github.com/alire-project/alire/releases/download/v${alr_version}/alr-${alr_version}-bin-x86_64-${os_lower}.zip
+        unzip alr-${alr_version}-bin-x86_64-${os_lower}.zip
+        rm alr-${alr_version}-bin-x86_64-${os_lower}.zip
+        echo "$PWD/bin" >> $GITHUB_PATH
 
     - name: Install GNAT (II)
       if: steps.need-GNAT.outputs.need == 'true'
